--- a/package.json
+++ b/package.json
@@ -12,16 +12,27 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.2.0",
+    "@angular/cdk": "~7.3.7",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
+    "@angular/material": "^7.3.7",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@material/animation": "^4.0.0",
+    "angular": "^1.7.8",
+    "angular-animate": "^1.7.8",
+    "angular-aria": "^1.7.8",
+    "angular-material": "^1.1.20",
+    "angular-messages": "^1.7.8",
     "core-js": "^2.5.4",
-    "rxjs": "~6.3.3",
+    "ngx-markdown": "^8.2.1",
+    "ngx-spinner": "^7.2.0",
+    "rxjs": "^6.3.3",
     "tslib": "^1.9.0",
+    "wordcloud": "^1.1.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
